--- a/genindex.html
+++ b/genindex.html
@@ -65,16 +65,18 @@
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.add_local_var">add_local_var() (Context method)</a>
 </li>
+      <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.add_special_local_var">add_special_local_var() (Context method)</a>
+</li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.add_state">add_state() (Context method)</a>
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.add_state_weak">add_state_weak() (Context method)</a>
 </li>
       <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.Always">Always (class in python2verilog.backend.verilog.ast)</a>
 </li>
-      <li><a href="python2verilog.optimizer.html#python2verilog.optimizer.increase_work.IncreaseWorkPerClockCycle.apply">apply() (IncreaseWorkPerClockCycle method)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="python2verilog.optimizer.html#python2verilog.optimizer.increase_work.IncreaseWorkPerClockCycle.apply">apply() (IncreaseWorkPerClockCycle method)</a>
+</li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.signals.InstanceSignals.apply_prefix">apply_prefix() (InstanceSignals static method)</a>
 </li>
       <li><a href="python2verilog.optimizer.html#python2verilog.optimizer.increase_work.IncreaseWorkPerClockCycle.apply_recursive">apply_recursive() (IncreaseWorkPerClockCycle method)</a>
